k8s/02-services/riju-docker-registry.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: riju
  name: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      volumes:
        - name: auth
          secret:
            secretName: registry-auth
      containers:
        - name: registry
          image: "registry:2"
          resources: {}
          readinessProbe:
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            failureThreshold: 1
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          ports:
            - name: api
              containerPort: 5000
          volumeMounts:
            - name: auth
              mountPath: /var/run/registry/auth

---
kind: Service
apiVersion: v1
metadata:
  namespace: riju
  name: docker-registry
spec:
  selector:
    app: docker-registry
  type: NodePort
  ports:
    - name: api
      port: 80
      nodePort: 30999
      targetPort: 5000

---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  namespace: riju
  name: docker-registry
spec:
  entryPoints:
    - docker
  routes:
    - kind: Rule
      match: "PathPrefix(`/`)"
      services:
        - namespace: riju
          name: docker-registry
          port: 80
